# nweb

./: Dockerfile  Jenkinsfile  Makefile  pelicanconf.py  publishconf.py  pyproject.toml
content/: docker-1.md  docker-2.md  keyboard-review.md  test-2.md  test.md
output/: archives.html  authors.html  categories.html  foobar-test.html  index.html  my-first-review.html  tags.html
output/author/: fooser.html
output/category/: review.html  test.html
output/theme/css/: main.css
themes/pelican-blueidea-mod/static/css/: main.css  pygment.css
themes/pelican-blueidea-mod/templates/: base.html
