[tool.poetry]
name = "nweb"
version = "0.1.0"
description = "Northtek website"
authors = ["fooser <fooser@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pelican = {extras = ["markdown"], version = "^4.5.0"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
